[package]
name = 'bholdus-chainbridge'
# Since a pallet always depends on frame-system, frame-support,
# we want to make keep our package versioning close to these frame dependencies.
# As this will help us to resolve conflicts easier if happened
version = '3.0.0'
authors = ['dung.lam@bholdus.com']
edition = '2018'

[dependencies]
# third-party dependencies
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.101", optional = true }

# primitives
sp-std = { version = "3.0.0", default-features = false, git = 'https://github.com/bholdus/substrate.git', branch = 'monthly-2021-05-update' }
sp-runtime = { version = "3.0.0", default-features = false , git = 'https://github.com/bholdus/substrate.git', branch = 'monthly-2021-05-update' }
sp-io = { version = "3.0.0", default-features = false , git = 'https://github.com/bholdus/substrate.git', branch = 'monthly-2021-05-update' }
sp-core = { version = "3.0.0", default-features = false , git = 'https://github.com/bholdus/substrate.git', branch = 'monthly-2021-05-update' }

# frame dependencies
frame-benchmarking = {default-features = false, optional = true, version = '3.1.0', git = 'https://github.com/bholdus/substrate.git', branch = 'monthly-2021-05-update'}
frame-support = { version = "3.0.0", default-features = false , git = 'https://github.com/bholdus/substrate.git', branch = 'monthly-2021-05-update' }
frame-system = { version = "3.0.0", default-features = false , git = 'https://github.com/bholdus/substrate.git', branch = 'monthly-2021-05-update' }

pallet-balances = { version = "3.0.0", default-features = false , git = 'https://github.com/bholdus/substrate.git', branch = 'monthly-2021-05-update' }

[features]
default = ["std"]
std = [
	"codec/std",
	"serde",
	"sp-std/std",
	"sp-runtime/std",
    "sp-io/std",
    "sp-core/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-balances/std",
]
runtime-benchmarks = ['frame-benchmarking']
