[package]
name = 'example-erc721'
version = '0.0.1'
authors = ['david@chainsafe.io']
edition = '2018'

[dependencies]
# third-party dependencies
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.101", optional = true }

# primitives
sp-std = { version = "3.0.0", default-features = false, git = 'https://github.com/bholdus/substrate.git', branch = 'monthly-2021-05-update'  }
sp-runtime = { version = "3.0.0", default-features = false, git = 'https://github.com/bholdus/substrate.git', branch = 'monthly-2021-05-update'  }
sp-io = { version = "3.0.0", default-features = false, git = 'https://github.com/bholdus/substrate.git', branch = 'monthly-2021-05-update'  }
sp-core = { version = "3.0.0", default-features = false, git = 'https://github.com/bholdus/substrate.git', branch = 'monthly-2021-05-update'  }

# frame dependencies
frame-support = { version = "3.0.0", default-features = false, git = 'https://github.com/bholdus/substrate.git', branch = 'monthly-2021-05-update'  }
frame-system = { version = "3.0.0", default-features = false, git = 'https://github.com/bholdus/substrate.git', branch = 'monthly-2021-05-update'  }

[dev-dependencies]
pallet-balances = { version = "3.0.0",default-features = false, git = 'https://github.com/bholdus/substrate.git', branch = 'monthly-2021-05-update'  }

[build-dependencies]
wasm-builder-runner = { version = "2.0.0", package = "substrate-wasm-builder-runner"}
[features]
default = ["std"]
std = [
	"codec/std",
	"serde",
	"sp-std/std",
	"sp-runtime/std",
    "sp-io/std",
    "sp-core/std",
	"frame-support/std",
	"frame-system/std",
]
